--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <script type="text/javascript" src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/ng-contentful/ng-contentful.js"></script>
+    <script type="text/javascript" src="js/showdown.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/directives.js"></script>
+    <script type="text/javascript" src="js/feature-beast.js"></script>
   </body>
 </html>
