--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="textfeature">
+<html lang="en" ng-app="listfeature">
   <head>
     <meta charset="utf-8">
     <title>RBMA Radio Picks</title>
