--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/feature-beast.css">
   </head>
   <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div ng-view></div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/waypoints.min.js"></script>
