--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>RBMA Radio Picks</title>
     <link rel="stylesheet" type="text/css" href="css/feature-beast.css">
   </head>
-  <body>
+  <body class="frame-body">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div ng-view></div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
