--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>RBMA Radio Picks</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/ngprogress/ngProgress.css">
     <link rel="stylesheet" type="text/css" href="css/feature-beast.css">
   </head>
   <body class="frame-body">
@@ -18,6 +19,7 @@
     <script type="text/javascript" src="bower_components/ng-contentful/ng-contentful.js"></script>
     <script type="text/javascript" src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script type="text/javascript" src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+    <script type="text/javascript" src="bower_components/ngprogress/build/ngProgress.min.js"></script>
     <script type="text/javascript" src="js/showdown.js"></script>
     <script type="text/javascript" src="js/waypoints.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
