--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="bower_components/angular-scroll/angular-scroll.min.js"></script>
     <script type="text/javascript" src="bower_components/ngprogress/build/ngProgress.min.js"></script>
     <script type="text/javascript" src="js/showdown.js"></script>
+    <script type="text/javascript" src="bower_components/jquery-waypoints/waypoints.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
